--- a/ewas-test.yml
+++ b/ewas-test.yml
@@ -1,32 +1,39 @@
 ---
 - doc: "ewas test"
   job:
-    mzml:
+    idat:
       class: File
       location:	https://zenodo.org/record/1251211/files/GSM1588704_8795207135_R01C02_Grn.idat?download=1
       filetype: idat
-    fasta:
+    idat:
       class: File
       location:	https://zenodo.org/record/1251211/files/GSM1588704_8795207135_R01C02_Red.idat?download=1
       filetype: idat
+    idat:
       class: File
       location: https://zenodo.org/record/1251211/files/GSM1588705_8795207119_R05C02_Grn.idat?download=1
       filetype: idat
+    idat:
       class: File
       location: https://zenodo.org/record/1251211/files/GSM1588705_8795207119_R05C02_Red.idat?download=1
       filetype: idat
+    idat:      
       class: File
       location: https://zenodo.org/record/1251211/files/GSM1588706_8795207135_R02C02_Grn.idat?download=1
       filetype: idat
+    idat:
       class: File
       location: https://zenodo.org/record/1251211/files/GSM1588706_8795207135_R02C02_Red.idat?download=1
       filetype: idat
+    idat:
       class: File
       location: https://zenodo.org/record/1251211/files/GSM1588707_8795207119_R06C02_Grn.idat?download=1
       filetype: idat
+    idat:
       class: File
       location: https://zenodo.org/record/1251211/files/GSM1588707_8795207119_R06C02_Red.idat?download=1
       filetype: idat
+    txt:      
       class: File
       location: https://zenodo.org/record/1251211/files/phenotypeTable.txt?download=1
       filetype: txt
